tests/security/taintThroughAwait/output.txt
ERROR: TaintedData - input.hack:6:10 - Data from a URL query string found its way to an HTML tag using path $_GET --array-fetch--> arrayvalue-fetch (input.hack:2:12) ----> return (input.hack:2:12) ----> call to foo (input.hack:1:23) ----> echo#1 (input.hack:6:10)
ERROR: TaintedData - input.hack:10:10 - Data from a URL query string found its way to an HTML tag using path $_GET --array-fetch--> arrayvalue-fetch (input.hack:2:12) ----> return (input.hack:2:12) ----> call to foo (input.hack:1:23) ----> echo#1 (input.hack:10:10)
